# finance-toolkit

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  codecov.yml  entrypoint.sh  finance-tools.sample.yml  requirements-tests.txt  requirements.txt  setup.cfg
.circleci/: config.yml
.github/workflows/: main.yml
docs/: bnp.md  boursorama.md  caisse-epargne.md  delayed-transactions.md  exchange-rate.md  reimbursement.md
finance_toolkit/: __init__.py  __main__.py  account.py  accounts.py  bnp.py  boursorama.py  caisse_epargne.py  currency.py  exchange_rate.py  fortuneo.py  models.py  pipeline.py  pipeline_bnp.py  pipeline_boursorama.py  pipeline_factory.py  pipeline_revolut.py  pipelines.py  revolut.py  tx.py  utils.py
src/: tx.py
test/: E1851234.csv  HistoriqueOperations_12345_du_14_01_2019_au_14_12_2019.csv  accounts_test.py  conftest.py  main_test.py  pipelines_fortuneo_test.py  pipelines_test.py  test_account.py  test_accounts.py  test_bnp.py  test_boursorama.py  test_caisse_epargne.py  test_exchange_rate.py  test_fortuneo.py  test_main.py  test_models.py  test_pipeline.py  test_pipeline_general.py  test_pipeline_revolut.py  test_pipelines.py  test_pipelines_fortuneo.py  test_pipelines_general.py  test_revolut.py  test_tx.py  test_utils.py  tx_main_test.py  tx_test.py  utils.py  utils_test.py
test/download/: 12345678_01112024_30112024.csv  E0790170.csv  Webstat_Export_20240107.csv  account-statement_2021-01-01_2022-05-27_undefined-undefined_abc123.csv  account-statement_2022-06-01_2022-07-14_undefined-undefined_e85fa6.csv  account-statement_2024-01-01_2024-01-10_undefined-undefined_abc123.csv  export-operations-11-06-2022_09-52-55.csv  export-operations-30-03-2019_08-50-51.csv
tx/: __main__.py  accounts.py  pipelines.py  tx.py  utils.py
