[metadata]
name = finance-toolkit
version = 0.1.0
author = Mincong Huang
# author-email =
description = Finance Toolkit helps you to understand your personal finance by collecting transactions from different companies.
long_description = file: README.md
url = https://github.com/mincong-h/finance-toolkit
# home-page = https://github.com/mincong-h/finance-toolkit
# project_urls =
    # Source = https://github.com/mincong-h/finance-toolkit
    # Tracker = https://github.com/mincong-h/finance-toolkit/issues
keywords = personal, finance, toolkit, bank, transaction
# license = MIT
# license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    # License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Office/Business :: Financial :: Spreadsheet

[options]
packages = finance_toolkit
install_requires =
    docopt == 0.6.2
    pandas == 0.24.2
    pyyaml == 5.1.2

[options.entry_points]
console_scripts =
    finance-toolkit = finance_toolkit.__main__:main

[flake8]
count = True
exclude =
    venv
max-line-length = 100
