[metadata]
name = finance-toolkit
version = 1.3.0
author = The Finance Toolkit Team
description = Finance Toolkit helps you to understand your personal finance by collecting transactions from different companies.
long_description = file: README.md
url = https://github.com/mincong-h/finance-toolkit
home-page = https://github.com/mincong-h/finance-toolkit
project_urls =
    Source = https://github.com/mincong-h/finance-toolkit
    Tracker = https://github.com/mincong-h/finance-toolkit/issues
keywords = personal, finance, toolkit, bank, transaction
# license = MIT
# license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    # License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Office/Business :: Financial :: Spreadsheet

[options]
packages = finance_toolkit
install_requires =
    docopt == 0.6.2
    numpy == 1.20.3  # https://github.com/pandas-dev/pandas/blob/1.5.x/pandas/compat/numpy/__init__.py
    pandas == 1.5.2
    pyyaml == 5.1.2
    cython == 0.29.37  # https://github.com/numpy/numpy/blob/v1.20.3/INSTALL.rst.txt

[options.entry_points]
console_scripts =
    finance-toolkit = finance_toolkit.__main__:main

[flake8]
count = True
exclude =
    venv
max-line-length = 100
